fixup! feat: set pixel perfect spacing for #form-status on #dropdown and #switch

--- a/packages/dnb-ui-lib/src/components/dropdown/style/_dropdown.scss
+++ b/packages/dnb-ui-lib/src/components/dropdown/style/_dropdown.scss
@@ -87,9 +87,9 @@
   }
   label + &[class*='__form-status'] {
     vertical-align: top;
-    transform: translateY(
-      -0.25rem
-    ); // ajust the shell to the inherited line-height for 4px
+    .dnb-dropdown__shell {
+      top: -0.375rem;
+    }
   }
 
   // ul element
