--- a/packages/dnb-ui-lib/src/components/dropdown/style/themes/dnb-dropdown-theme-ui.scss
+++ b/packages/dnb-ui-lib/src/components/dropdown/style/themes/dnb-dropdown-theme-ui.scss
@@ -196,6 +196,6 @@
 
   // ajust the form-status to the inner border for 2px
   > .dnb-form-status {
-    transform: translateY(-0.125rem);
+    transform: translateY(-0.4375rem);
   }
 }
